made stuff a bit more modular

--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<canvas></canvas>
 	
-	<script type="text/javascript" src="canvas.js"></script>
-	<!-- <script type="module" src="Circle.js"></script>
-	<script type="module" src="CircleFactory.js"></script> -->
+	<script type="module" src="canvas.js"></script>
+	<script type="module" src="Circle.js"></script>
+	<!-- <script type="module" src="CircleFactory.js"></script> -->
 </body>
 </html>
